--- a/index.html
+++ b/index.html
@@ -5,40 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <title>Jokes Generator</title>
+    <title>Kriesenmanager</title>
   </head>
   <body>
     <div class="container">
       <div class="card">
         <div class="title">
-          <h1>Random Jokes Generator</h1>
+          <h1>Kriesenmanager</h1>
         </div>
         <div id="joke-content">
-          <p id="joke">Click the generate button to get a setup joke-content</p>
-          <p id="answer">And the punchline will appear here</p>
+          <p id="joke">Klick Generate, wenn mal wieder Kriese ist.../p>
+          <p id="answer">...und es wird etwas besser</p>
           <button id="generator">Generate</button>
-        </div>
-      </div>
-      <div class="footer">
-        <div class="footer-content">
-          <p>
-            Developed by
-            <a
-              target="_blank"
-              rel="noreferrer"
-              href="https://github.com/valentinesamuel"
-              ><em><b>Samuel Valentine</b></em></a
-            >
-          </p>
-          <p>
-            Fork or clone this repo on
-            <a
-              target="_blank"
-              rel="noreferrer"
-              href="https://github.com/valentinesamuel/jokes-generator"
-              ><em><b>Github</b></em></a
-            >
-          </p>
         </div>
       </div>
     </div>
