--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <h1>Kriesenmanager</h1>
         </div>
         <div id="joke-content">
-          <p id="joke">Klick Generate, wenn mal wieder Kriese ist.../p>
+          <p id="joke">Klick Generate, wenn mal wieder Kriese ist...</p>
           <p id="answer">...und es wird etwas besser</p>
           <button id="generator">Generate</button>
         </div>
