--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
           <h1>Kriesenmanager</h1>
         </div>
         <div id="joke-content">
-          <p id="joke">Klick Generate, wenn mal wieder Kriese ist...</p>
+          <div><strong>Setup:</strong></div>
+          <p id="joke">Klick Generate, wenn mal wieder Krise ist...</p>
+          
+          <div><strong>Punch line:</strong></div>
           <p id="answer">...und es wird etwas besser</p>
+          
           <button id="generator">Generate</button>
         </div>
       </div>
