--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div id="joke-content">
           <div><strong>Setup:</strong></div>
-          <p id="joke">Klick Generate, wenn mal wieder Krise ist...</p>
+          <p id="joke">Klick Generate, wenn wieder Krise ist...</p>
           
           <div><strong>Punch line:</strong></div>
           <p id="answer">...und es wird etwas besser</p>
