--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css?v=5" />
-    <title>Kriesenmanager</title>
+    <title>Krisenmanager</title>
   </head>
   <body>
     <div class="container">
       <div class="card">
         <div class="title">
-          <h1>Kriesenmanager</h1>
+          <h1>Krisenmanager</h1>
         </div>
         <div id="joke-content">
           <div><strong>Setup:</strong></div>
