--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         </div>
         <div id="joke-content">
           <div><strong>Setup:</strong></div>
-          <p id="joke">Klick Generate, wenn wieder Krise ist...</p>
+          <p id="joke">Bei Krise "Generate" Klicken</p>
           
           <div><strong>Punch line:</strong></div>
-          <p id="answer">...und es wird etwas besser</p>
+          <p id="answer"></p>
           
           <button id="generator">Generate</button>
         </div>
