--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div id="joke-content">
           <div><strong>Setup:</strong></div>
-          <p id="joke">Bei Krise "Generate" Klicken</p>
+          <p id="joke">Bei Krise "Generate" klicken</p>
           
           <div><strong>Punch line:</strong></div>
           <p id="answer"></p>
