--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
           <h1>Krisenmanager</h1>
         </div>
         <div id="joke-content">
-          <div><strong>Setup:</strong></div>
+          <div><strong></strong></div>
           <p id="joke">Bei Krise "Generate" klicken</p>
           
-          <div><strong>Punch line:</strong></div>
+          <div><strong></strong></div>
           <p id="answer"></p>
           
           <button id="generator">Generate</button>
