--- a/index.html
+++ b/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css?v=14" />
-    <title>Krisenmanager</title>
-  </head>
-  <body>
-    <div class="container">
-      <div class="card">
-        <div class="title">
-          <h1>Krisenmanager</h1>
-        </div>
-        <div id="joke-content">
-          <div><strong></strong></div>
-          <p id="joke">Bei Krise "Generate" klicken</p>
-          
-          <div><strong></strong></div>
-          <p id="answer"></p>
-          
-          <button id="generator">Generate</button>
-        </div>
+<html lang="de">
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="styles.css?v=16" />
+  <title>Beganator</title>
+</head>
+<body>
+  <div class="container">
+    <div class="card">
+      <div class="title">
+        <h1>Beganator</h1>
+      </div>
+      <div id="joke-content">
+        <div><strong></strong></div>
+        <p id="joke"></p>
+
+        <div><strong></strong></div>
+        <p id="answer"></p>
+
+        <button id="generator">Generate</button>
       </div>
     </div>
+  </div>
 
-    <script src="./index.js"></script>
-  </body>
+  <script src="./index.js"></script>
+</body>
 </html>
